--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,3 @@
 PORT=8000
-MONGODB_URI=mongodb+srv://sksaifulla53:SYFU2204@cluster0.47hkk.mongodb.net
+MONGODB_URI=mongodb+srv://sksaifulla53:your-password@cluster0.47hkk.mongodb.net
+CORS_ORIGIN=*
