--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,7 @@
 PORT=8000
 MONGODB_URI=mongodb+srv://sksaifulla53:your-password@cluster0.47hkk.mongodb.net
 CORS_ORIGIN=*
+ACCESS_TOKEN_SECRET = useyours
+ACCESS_TOKEN_EXPIRY=1d
+REFRESH_TOKEN_SECRET=useurs
+REFRESH_TOKEN_EXPIRY =10d
